--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luke Perkin - Advanced Prototyping and Model Fabrication</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        header {
+            text-align: center;
+            padding: 20px;
+            background: #f4f4f4;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+        .container {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .top-images {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+        .top-images img {
+            width: 32%;
+            height: auto;
+        }
+        .top-images img.mobile {
+            width: 100%;
+        }
+        .overview {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        .projects {
+            display: flex;
+            flex-direction: column;
+        }
+        .project {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .project img {
+            width: 150px;
+            height: auto;
+            margin-right: 20px;
+        }
+        .project div {
+            max-width: 600px;
+        }
+        @media (max-width: 768px) {
+            .top-images {
+                flex-direction: column;
+            }
+            .top-images img {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+            .project {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .project img {
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Luke Perkin - Advanced Prototyping and Model Fabrication</h1>
+        </div>
+    </header>
+    <div class="container">
+        <div class="top-images">
+            <img src="image1.jpg" alt="Project Image 1">
+            <img src="image2.jpg" alt="Project Image 2">
+            <img src="image3.jpg" alt="Project Image 3">
+        </div>
+        <div class="overview">
+            <p>Welcome to my portfolio. I specialize in advanced prototyping and model fabrication, creating innovative solutions and cutting-edge models for a variety of industries. Below you will find a selection of my recent projects showcasing my work in exhibition models, musical instruments, and high-tech photography equipment.</p>
+        </div>
+        <div class="projects">
+            <div class="project">
+                <img src="project1.jpg" alt="EV Charging Exhibition Model">
+                <div>
+                    <h2>Project 1 - EV Charging Exhibition Demonstration Model for Go Eve</h2>
+                    <p>I had such fun building this model for the EV shows in Las Vegas and London! Go Eve gives you Rapid DC charging in every parking space. It's a genius patented solution to a real world logistical problem, install the extendable system, plug all your vehicles in, and control the prioritisation queue in software!</p>
+                </div>
+            </div>
+            <div class="project">
+                <img src="project2.jpg" alt="Circle Guitar">
+                <div>
+                    <h2>Project 2 - Circle Guitar for Circle Instruments</h2>
+                    <p>A new spin on the electric guitar. A brushless motor drives a wheel with plectrums, controlled with millisecond accuracy from a midi sequencer. As played by guitarists from Radiohead and Muse.</p>
+                </div>
+            </div>
+            <div class="project">
+                <img src="project3.jpg" alt="ORB360 Photography Robot">
+                <div>
+                    <h2>Project 3 - ORB360 for Ordre</h2>
+                    <p>I designed and built rapid prototype photography robots for the successful $10M Series A funding round. I then built and managed a team of designers and engineers to develop large photobooths for models and smaller booths for accessories. We shot several seasons of luxury collections for major designers including Michael Kors and Jimmy Choo.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+
