--- a/index.html
+++ b/index.html
@@ -91,28 +91,28 @@
             <img src="image3.jpg" alt="Project Image 3">
         </div>
         <div class="overview">
-            <p>Welcome to my portfolio. I specialize in advanced prototyping and model fabrication, creating innovative solutions and cutting-edge models for a variety of industries. Below you will find a selection of my recent projects showcasing my work in exhibition models, musical instruments, and high-tech photography equipment.</p>
+            <p>I specialize in advanced prototyping and model fabrication, creating innovative solutions and cutting-edge models for a variety of industries. Below you will find a selection of my recent projects showcasing my work in exhibition models, musical instruments, and high-tech photography equipment.</p>
         </div>
         <div class="projects">
             <div class="project">
                 <img src="project1.jpg" alt="EV Charging Exhibition Model">
                 <div>
-                    <h2>Project 1 - EV Charging Exhibition Demonstration Model for Go Eve</h2>
-                    <p>I had such fun building this model for the EV shows in Las Vegas and London! Go Eve gives you Rapid DC charging in every parking space. It's a genius patented solution to a real world logistical problem, install the extendable system, plug all your vehicles in, and control the prioritisation queue in software!</p>
+                    <h2>EV Charging Exhibition Demonstration Model for Go Eve</h2>
+                    <p>I had such fun building this model for the EV shows in Las Vegas and London! Go Eve gives you Rapid DC charging in every parking space. It's a genius patented solution to a real world logistical problem, install the extendable system, plug all your vehicles in, and control the prioritization queue in software!</p>
                 </div>
             </div>
             <div class="project">
                 <img src="project2.jpg" alt="Circle Guitar">
                 <div>
-                    <h2>Project 2 - Circle Guitar for Circle Instruments</h2>
+                    <h2>Circle Guitar for Circle Instruments</h2>
                     <p>A new spin on the electric guitar. A brushless motor drives a wheel with plectrums, controlled with millisecond accuracy from a midi sequencer. As played by guitarists from Radiohead and Muse.</p>
                 </div>
             </div>
             <div class="project">
                 <img src="project3.jpg" alt="ORB360 Photography Robot">
                 <div>
-                    <h2>Project 3 - ORB360 for Ordre</h2>
-                    <p>I designed and built rapid prototype photography robots for the successful $10M Series A funding round. I then built and managed a team of designers and engineers to develop large photobooths for models and smaller booths for accessories. We shot several seasons of luxury collections for major designers including Michael Kors and Jimmy Choo.</p>
+                    <h2>ORB360 for Ordre</h2>
+                    <p>I designed and built rapid prototype photography robots for Ordre's successful $10M Series A funding round. I then built and managed a team of designers and engineers to develop large photobooths for models and smaller booths for accessories. We shot several seasons of luxury collections for major designers including Michael Kors and Jimmy Choo.</p>
                 </div>
             </div>
         </div>
